@startuml

 package de.gematik.ti.healthcardaccess {
    interface IHealthCardCommand {
        {abstract} + executeOn()
    }
  }

 package de.gematik.ti.healthcardaccess {
    abstract class AbstractHealthCardCommand {
        {static} - LOG : Logger
        {static} # NE_MAX_EXTENDED_LENGTH : int
        {static} # NE_MAX_SHORT_LENGTH : int
        {static} # EXPECT_ALL : int
        # cla : int
        # ins : int
        # p1 : int
        # p2 : int
        # data : byte[]
        # ne : int
        # AbstractHealthCardCommand()
        # AbstractHealthCardCommand()
        {abstract} + getTechnicalResponseApdus()
        - inferResponseStatusFromResponseCode()
        + executeOn()
        # sendApdu()
        - getCommandApdu()
    }
  }

 package de.gematik.ti.healthcardaccess {
     package de.gematik.ti.healthcardaccess.commands {
       class ManageChannelCommand {
           {static} - CLA : int
           {static} - INS : int
           {static} - MODE_INTENDED_ACTION_OPEN_CHANNEL_P1 : int
           {static} - MODE_INTENDED_ACTION_OPEN_CHANNEL_P2 : int
           {static} - MODE_INTENDED_RESET_ON_APPLICATION_LEVEL_P1 : int
           {static} - MODE_INTENDED_RESET_ON_APPLICATION_LEVEL_P2 : int
           {static} - MODE_INTENDED_ACTION_CLOSE_CHANNEL_P1 : int
           {static} - MODE_INTENDED_RESET_CLOSE_CHANNEL_P1 : int
           {static} - MODE_AFFECTED_CHANNEL_IN_CLA_BYTE : int
           {static} - EXPECTED_LENGTH_01 : int
           {static} - technicalResponseApdus : Map<Integer, ResponseStatus>
           + getTechnicalResponseApdus()
           + ManageChannelCommand()
           + ManageChannelCommand()
       }
     }
   }


  AbstractHealthCardCommand -up-|> IHealthCardCommand
  ManageChannelCommand -up-|> AbstractHealthCardCommand

@enduml